# ChangeLog for games-action/garden
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/garden/ChangeLog,v 1.3 2009/11/21 18:10:57 maekke Exp $

  21 Nov 2009; Markus Meier <maekke@gentoo.org> garden-1.0.6.ebuild:
  x86 stable, bug #288922

  05 Nov 2009; Tristan Heaven <nyhm@gentoo.org> garden-1.0.6.ebuild:
  Add ~amd64 keyword

*garden-1.0.6 (12 Apr 2009)

  12 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org> +metadata.xml,
  +garden-1.0.6.ebuild:
  initial commit - ebuild submitted by David Valentim Dias via bug #265726
