@@ -1,6 +1,11 @@
 # ChangeLog for games-action/garden
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/garden/ChangeLog,v 1.3 2009/11/21 18:10:57 maekke Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/garden/ChangeLog,v 1.4 2010/04/06 17:50:49 nyhm Exp $
+
+*garden-1.0.8 (06 Apr 2010)
+
+  06 Apr 2010; Tristan Heaven <nyhm@gentoo.org> +garden-1.0.8.ebuild:
+  Version bump
 
   21 Nov 2009; Markus Meier <maekke@gentoo.org> garden-1.0.6.ebuild:
   x86 stable, bug #288922
